--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
+    "react-typing-effect": "^2.0.5",
     "slick-carousel": "^1.8.1"
   }
 }
