--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-reveal": "^1.2.2",
     "react-slick": "^0.29.0",
     "react-typing-effect": "^2.0.5",
     "slick-carousel": "^1.8.1"
